commandLine Runner debug